--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
         <i id="toggleTheme" class="bi bi-sun"></i>
     </header>
     <nav>
-        <ul class="menu menu--social">
+        <ul class="menu menu--mobile">
             <li class="menu__item">
-                <a class="menu__link" href="#home">
+                <a class="menu__link active" href="#home">
                     <i class="menu__icon bi bi-house"></i>
                     <span class="menu__text">Home</span>
                 </a>
             </li>
               <li class="menu__item">
-                <a class="menu__link" href="#home">
-                    <i class="menu__icon bi bi-house"></i>
+                <a class="menu__link" href="#projetos">
+                    <i class="menu__icon bi bi-window-stack"></i>
                     <span class="menu__text">Projetos</span>
                 </a>
             </li>
               <li class="menu__item">
-                <a class="menu__link" href="#home">
-                    <i class="menu__icon bi bi-house"></i>
+                <a class="menu__link" href="#sobre">
+                    <i class="menu__icon bi bi-person"></i>
                     <span class="menu__text">Sobre</span>
                 </a>
             </li>
               <li class="menu__item">
-                <a class="menu__link" href="#home">
-                    <i class="menu__icon bi bi-house"></i>
+                <a class="menu__link" href="#contato">
+                    <i class="menu__icon bi bi-envelope-at-fill"></i>
                     <span class="menu__text">Contato</span>
                 </a>
             </li>
