--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
                 <a href="https://github.com/Santosandrade996">Giselle Santos</a>
             </p>
         </footer>
+        <script src="src/js/scripts.js"></script>
     
     </body>
 </html>
