Continuação do projeto

--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
                 </li>
             </ul>
         </nav>
+        <main>
+            <h1>Soluções criativas e desenvolvimento front-end</h1>
+        </main>
         <footer>
             <p>
                 &copy; 2025 Your Company. All rights reserved.
