--- a/index.html
+++ b/index.html
@@ -72,7 +72,26 @@
             </ul>
         </nav>
         <main>
-            <h1>Soluções criativas e desenvolvimento front-end</h1>
+            <div class="maiin__content1">
+                  <h1>Soluções criativas e desenvolvimento front-end</h1>
+                  <p>Giselle Santos,Rio de janeiro</p>
+                  <ul class="menu menu--social">
+                    <li>
+                        <a class="menu__link" href="https://www.linkedin.com/in/giselle-santos-21ab221b6/" target="_blank">
+                            <i class="menu__icon bi bi-linkedin"></i>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="menu__link" href="https://github.com/Santosandrade996" target="_blank">
+                             <i class="menu__icon  bi bi-github"></i>
+                        </a>
+                    </li>
+                  </ul>
+                  <button class="btn btn--primary">
+                    <span>Ver Projetos</span>
+                    <i class="bi bi-arrow-down-right"></i>
+                  </button>
+            </div>      
         </main>
         <footer>
             <p>
