--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
             </ul>
         </nav>
         <main>
-            <div class="maiin__content1">
-                  <h1>Soluções criativas e desenvolvimento front-end</h1>
-                  <p>Giselle Santos,Rio de janeiro</p>
+            <div class="main__content1">
+                  <h1><b>Soluções criativas e</b> desenvolvimento front-end</h1>
+                  <p>Formada em Tecnologa de Redes de Computadores 
+                    Giselle Santos,Rio de janeiro</p>
                   <ul class="menu menu--social">
                     <li>
                         <a class="menu__link" href="https://www.linkedin.com/in/giselle-santos-21ab221b6/" target="_blank">
@@ -93,6 +94,20 @@
                   </button>
             </div>      
         </main>
+        <section class="technologies">
+            <h2>Principais tecnologias desenvolvidas durante a faculdade e cursos</h2>
+            <ul class="technologies__list">
+                <li class="technologies__item">
+                    <img src="src/images/tecnologias/html-5-logo-svgrepo-com.svg" alt="Logo HTML-5">
+                </li>
+                <li class="technologies__item">
+                    <img src="src/images/tecnologias/css3-01-svgrepo-com.svg" alt="Logo CSS-3">
+                </li>
+                <li class="technologies__item">
+                    <img src="src/images/tecnologias/python-svgrepo-com.svg" alt="Logo Python">
+                </li>
+            </ul>
+        </section>
         <footer>
             <p>
                 &copy; 2025 Your Company. All rights reserved.
