--- a/index.html
+++ b/index.html
@@ -98,13 +98,13 @@
             <h2>Principais tecnologias desenvolvidas durante a faculdade e cursos</h2>
             <ul class="technologies__list">
                 <li class="technologies__item">
-                    <img src="src/images/tecnologias/html-5-logo-svgrepo-com.svg" alt="Logo HTML-5">
+                    <img  class="technologies__logo" src="src/images/tecnologias/html-5-logo-svgrepo-com.svg" alt="Logo HTML-5">
                 </li>
                 <li class="technologies__item">
-                    <img src="src/images/tecnologias/css3-01-svgrepo-com.svg" alt="Logo CSS-3">
+                    <img  class="technologies__logo" src="src/images/tecnologias/css3-01-svgrepo-com.svg" alt="Logo CSS-3">
                 </li>
                 <li class="technologies__item">
-                    <img src="src/images/tecnologias/python-svgrepo-com.svg" alt="Logo Python">
+                    <img  class="technologies__logo" src="src/images/tecnologias/python-svgrepo-com.svg" alt="Logo Python">
                 </li>
             </ul>
         </section>
