--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             </div>      
         </main>
         <section class="technologies">
-            <h2>Principais tecnologias desenvolvidas durante a faculdade e cursos</h2>
+            <h2>Principais Tecnologias Desenvolvidas Durante a Graduação e Cursos...</h2>
             <ul class="technologies__list">
                 <li class="technologies__item">
                     <img  class="technologies__logo" src="src/images/tecnologias/html-5-logo-svgrepo-com.svg" alt="Logo HTML-5">
@@ -105,6 +105,9 @@
                 </li>
                 <li class="technologies__item">
                     <img  class="technologies__logo" src="src/images/tecnologias/python-svgrepo-com.svg" alt="Logo Python">
+                </li>
+                <li class="technologies__item">
+                    <img class="technologies__logo" src="src/images/tecnologias/cisco-2-logo-svgrepo-com.svg" alt="Logo da Cisco">
                 </li>
             </ul>
         </section>
