--- a/index.html
+++ b/index.html
@@ -111,6 +111,14 @@
                 </li>
             </ul>
         </section>
+        <section id="projetos">
+            <h2>Projetos</h2>
+            <div class="projects__container">
+                <div class="projects__card">
+                    <img src="src/images/projects/Tecnologia em Harmonia Digital.png" alt="">
+                </div>
+            </div>
+        </section>
         <footer>
             <p>
                 &copy; 2025 Your Company. All rights reserved.
