--- a/index.html
+++ b/index.html
@@ -111,11 +111,44 @@
                 </li>
             </ul>
         </section>
-        <section id="projetos">
+        <section id="projetos" class="projects">
             <h2>Projetos</h2>
             <div class="projects__container">
                 <div class="projects__card">
-                    <img src="src/images/projects/Tecnologia em Harmonia Digital.png" alt="">
+                    <img class="card__cover" src="src/images/projects/Tecnologia em Harmonia Digital.png" alt="Logo feita pela Inteligencia Artificial">
+                    <div class="card__body">
+                        <h3 class="card__title">Lista de compras-IOT</h3>
+                        <p class="card__description">Lista de Compras para melhoria do dia a dia</p>
+                       
+                        <ul class="card__list">
+                            <li class="__item">Listagem de favoritos</li>
+                            <li class="__item">Carrinho de compras</li>
+                            <li class="__item">Filtragem de preço</li>
+                        </ul>
+                        <ul class="technologies__list">
+                            <li class="technologies__item">
+                                <img  class="technologies__logo" src="src/images/tecnologias/html-5-logo-svgrepo-com.svg" alt="Logo HTML-5">
+                            </li>
+                            <li class="technologies__item">
+                                <img  class="technologies__logo" src="src/images/tecnologias/css3-01-svgrepo-com.svg" alt="Logo CSS-3">
+                            </li>
+                            <li class="technologies__item">
+                                <img  class="technologies__logo" src="src/images/tecnologias/python-svgrepo-com.svg" alt="Logo Python">
+                            </li>
+                            <li class="technologies__item">
+                                <img class="technologies__logo" src="src/images/tecnologias/cisco-2-logo-svgrepo-com.svg" alt="Logo da Cisco">
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="card__buttons">
+                        <button class="btn btn--primary">
+                            <span>Prévia</span>
+                            <i class="bi bi-arrow-up-right"></i>
+                        </button>
+                        <button class="btn">
+                            <span>Repositorio</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </section>
