--- a/index.html
+++ b/index.html
@@ -151,6 +151,83 @@
                     </div>
                 </div>
             </div>
+            <div class="projects__card card--reverse">
+                <img src="src/images/projects/Tecnologia em Harmonia Digital.png" alt="">
+                <div class="card__body">
+                    <h3 class="card__title">Archstil Blog</h3>
+                    <p class="card__description">A história por trás dos Estilos Arquitetônicos.</p>
+                    <ul class="card__list">
+                        <li class="card__item">Postagens relacionadas e em destaque;</li>
+                        <li class="card__item">Filtragem por tags e categorias;</li>
+                        <li class="card__item">Biografia do autor.</li>
+                    </ul>
+                    <ul class="technologies__list">
+                        <li class="technologies__item">
+                            <img class="technologies__logo" src="src/images/tecnologias/html-5-logo-svgrepo-com.svg" alt="Logo HTML5">
+                        </li>
+                        <li class="technologies__item">
+                            <img class="technologies__logo" src="src/images/tecnologias/css3-01-svgrepo-com.svg" alt="t">
+                        </li>
+                        <li class="technologies__item">
+                            <img class="technologies__logo" src="src/images/tecnologias/javascript-svgrepo-com.svg" alt="">
+                        </li>
+                        <li class="technologies__item">
+                            <img class="technologies__logo" src="src/images/tecnologias/python-svgrepo-com.svg" alt="">
+                        </li>
+                    </ul>
+                    <div class="card__buttons">
+                        <button class="btn btn--primary">
+                            <span>Prévia</span>
+                            <i class="bi bi-arrow-up-right"></i>
+                        </button>
+                         <button class="btn">
+                            <span>Repositório</span>
+                        </button>  
+                    </div>
+                </div>
+            </div>
+            <div class="projects__card">e
+                <img class="card__cover" src="/src/images/projects/Tecnologia em Harmonia Digital.png" alt="">
+                <div class="card__body">
+                    <h3 class="card__title">Games Store</h3>
+                    <p class="card__description">Loja online de Games.</p>
+                    <ul class="card__list">
+                        <li class="card__item">Listagem de favoritos;</li>
+                        <li class="card__item">Carrinho de compras;</li>
+                        <li class="card__item">Filtragem por preço e categoria.</li>
+                     </ul>
+                    <ul class="technologies__list">
+                        <li class="technologies__item">
+                        <img class="technologies__logo" src="assets/images/technologies/Angular.svg" alt="Logo Angular">
+                        </li>
+                        <li class="technologies__item">
+                        <img class="technologies__logo" src="assets/images/technologies/TypeScript.svg" alt="Logo TypeScript">
+                        </li>
+                        <li class="technologies__item">
+                        <img class="technologies__logo" src="assets/images/technologies/Bootstrap.svg" alt="Logo Bootstrap">
+                        </li>
+                        <li class="technologies__item">
+                        <img class="technologies__logo" src="assets/images/technologies/SASS.svg" alt="Logo SASS">
+                        </li>
+                    </ul>
+                    <div class="card__buttons">
+                        <button class="btn btn--primary">
+                        <span>Prévia</span>
+                        <i class="bi bi-arrow-up-right"></i>
+                        </button>  
+                        <button class="btn">
+                        <span>Repositório</span>
+                        </button>  
+                    </div>
+                    </div>
+                </div>
+                <a href="https://github.com/Santosandrade996">
+                    <button class="btn btn--primary">
+                    <span>Ver Todos os Projetos</span>
+                    <i class="bi bi-arrow-up-right"></i>
+                    </button>  
+                </a>
+            </div>
         </section>
         <footer>
             <p>
