--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
   <title>Portifólio</title>
-  <meta name="description" content="Portfólio da desenvolvedora front-end Elidiana Andrade para compartilhar projetos e habilidades desenvolvidas.">
 
   <link rel="shortcut icon" href="src/images/icon/coala.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -76,8 +76,8 @@
 
   <main id="home">
     <div class="main__content1">
-      <h1><b>Soluções Criativas &</b> Desenvolvimento Front-end</h1>
-      <p>Giselle Santos, Rio de Janeiro</p> 
+      <h1><b>Aprendendo e Criando Projetos em TI</b> e Desenvolvimento Web</h1>
+      <p>Giselle Santos, Rio de Janeiro-Brazil</p> 
       <ul class="menu menu--social">
         <li>
           <a class="menu__link" href="https://github.com/Santosandrade996" target="_blank">
@@ -207,7 +207,7 @@
           </div>
         </div>
       </div>
-      <a href="https://github.com/elidianaandrade">
+      <a href="https://github.com/Santosandrade996?tab=repositories">
         <button class="btn btn--primary">
           <span>Ver Todos os Projetos</span>
           <i class="bi bi-arrow-up-right"></i>
@@ -246,7 +246,7 @@
       <div class="col1">
         <div class="row1">
           <h3>Formação</h3>
-          <h4></h4>
+          <h4>Tecnologa De Redes De Computadores</h4>
           <span></span>
           <div class="about__icons">
             <i class="bi bi-bank"></i>
@@ -298,6 +298,7 @@
                 Cisco CCNAv7. December 10, 2022 
               </p>
               <p>
+                Fundamentos de redes comutadas e roteadas, configuração de switches e roteadores, conceitos de VLAN, roteamento estático e dinâmico, além de noções básicas sobre redes wireless.
               </p>
             </div>
           </div>
@@ -333,7 +334,7 @@
 
   <footer>
     <p>
-      © 2023. Portfólio desenvolvido para fins educativos no Lab "Construindo seu Portfolio Front-end do Zero" da 
+      © 2025. Portfólio desenvolvido para fins educativos no Lab "Construindo seu Portfolio Front-end do Zero" da 
       <a href="" target="_blank">Digital Innovation One</a> por 
       <a href="" target="_blank">Giselle Santos</a>.
     </p>
