--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <link rel="shortcut icon" href="src/images/icon/coala.png" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-  <link rel="stylesheet" href="assets/css/styles.css">
+  <link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
   <header class="header">
