--- a/index.html
+++ b/index.html
@@ -339,6 +339,6 @@
       <a href="" target="_blank">Giselle Santos</a>.
     </p>
   </footer>
-  <script src="assets/js/scripts.js"></script>
+  <script src="src/js/scripts.js"></script>
 </body>
 </html>
