--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       <div class="col1">
         <div class="row1">
           <h3>Formação</h3>
-          <h4>Tecnologa De Redes De Computadores</h4>
+          <h4>Tecnóloga Em Redes De Computadores</h4>
           <span></span>
           <div class="about__icons">
             <i class="bi bi-bank"></i>
@@ -319,7 +319,7 @@
         </a>
       </li>
       <li>
-        <a class="menu__link" href="https://www.linkedin.com/in/giselle-santos-21ab221b6/" target="_blank">
+        <a class="menu__link" href="https://www.linkedin.com/in/   giselle-santos-21ab221b6/" target="_blank">
           <i class="menu__icon bi bi-linkedin"></i>
           <span>LinkedIn</span>
         </a>
