--- a/index.html
+++ b/index.html
@@ -129,7 +129,8 @@
           <h3 class="card__title">Smart Geladeira IoT</h3>
           <p class="card__description">Projeto de geladeira inteligente com monitoramento via Internet das Coisas.</p>
           <ul class="card__list">
-            <li class="card__item">Controle de temperatura em tempo real.</li>
+            <li class="card__item">Desenvolvimento feito com a equipe TILíderes</li>
+             <li class="card__item">Câmera Infravermelho para escaneamentos de alimentos.</li>
             <li class="card__item">Notificações de estoque de alimentos.</li>
             <li class="card__item">Conexão com aplicativo mobile para monitoramento remoto.</li>
           </ul>
@@ -143,7 +144,7 @@
           </ul>
           <div class="card__buttons">
             <button class="btn btn--primary">
-              <span>Prévia</span>
+              <a href="https://www.figma.com/design/PiwyS4F7dPrtJdsw83wGu1/geladeira?node-id=0-1&p=f&t=4LU8upnJkiXSHdwf-0" target="_blank"><span>Prévia</span></a>
               <i class="bi bi-arrow-up-right"></i>
             </button>  
             <button class="btn">
@@ -172,11 +173,11 @@
           </ul>
           <div class="card__buttons">
             <button class="btn btn--primary">
-              <span>Prévia</span>
+              <a href="https://github.com/Santosandrade996/Stranger-Things-project" target="_blank"><span>Repositório</span></a>
               <i class="bi bi-arrow-up-right"></i>
             </button>  
             <button class="btn">
-              <span>Repositório</span>
+              <span>Prévia</span>
             </button>  
           </div>
         </div>
@@ -198,11 +199,11 @@
           </ul>
           <div class="card__buttons">
             <button class="btn btn--primary">
-              <span>Prévia</span>
+              <a href="https://github.com/Santosandrade996/carteira-trabalho-python" target="_blank"><span>Repositório</span></a>
               <i class="bi bi-arrow-up-right"></i>
             </button>  
             <button class="btn">
-              <span>Repositório</span>
+              <span>Prévia</span>
             </button>  
           </div>
         </div>
@@ -228,7 +229,7 @@
           <i class=""></i>
         </div>
         <div class="description__buttons">
-          <a href="" target="_blank">
+          <a href="https://www.linkedin.com/in/giselle-santos-21ab221b6/" target="_blank">
             <button class="btn btn--primary">
               <span>Conecte-se Comigo</span>
               <i class="bi bi-arrow-up-right"></i>
@@ -276,7 +277,7 @@
         <div id="accordion">
           <div class="accordion__item active">
             <button class="accordion__header start">
-              <span>Analista Cibersegurança Jr</span>
+              <span>Analista Cibersegurança Jrº.</span>
               <i class="bi bi-caret-down-fill"></i>
             </button>
             <div class="accordion__body">
@@ -308,8 +309,7 @@
   
   <section id="contato" class="contact">
     <h2>Contate-me</h2>
-    <p>Estou disponível para serviços e novas conexões. Contate-me via 
-      e-mail e conecte-se comigo através das minhas redes sociais.
+    <p>Estou aberta a novas oportunidades e desafios. Sinta-se à vontade para entrar em contato comigo!
     </p>
     <ul class="menu menu--social">
       <li>
@@ -319,16 +319,23 @@
         </a>
       </li>
       <li>
-        <a class="menu__link" href="https://www.linkedin.com/in/   giselle-santos-21ab221b6/" target="_blank">
+        <a class="menu__link" href="https://www.linkedin.com/in/giselle-santos-21ab221b6/" target="_blank">
           <i class="menu__icon bi bi-linkedin"></i>
           <span>LinkedIn</span>
+        </a>
+      </li>
+       <li>
+        <a class="menu__link" href="https://wa.me/21970735806" target="_blank">
+          <i class="bi bi-whatsapp"></i>
+          <span>WhatsApp</span>
         </a>
       </li>
     </ul>
     <a href="mailto:giselleandrade1996@gmail.com">
       <button class="btn btn--primary">
         <span class="email">giselleandrade1996@gmail.com</span>
-      </button>  
+        <i class="bi bi-envelope-at"></i>
+      </button>
     </a>
   </section>
 
