Finalizando efeitos de estilizações

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         </a>
       </li>
     </ul>
-    <a href="mailto:giselleandrade1996@gmail.com">
+    <a href="mailto:giselleandrade1996@gmail.com" target="_blank">
       <button class="btn btn--primary">
         <span class="email">giselleandrade1996@gmail.com</span>
         <i class="bi bi-envelope-at"></i>
