--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   
   <title>Portifólio</title>
 
-  <link rel="shortcut icon" href="src/images/icon/coala.png" type="image/x-icon">
+  <link rel="shortcut icon" href="src/images/icon/gif.gif" type="image/x-icon">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
   <link rel="stylesheet" href="src/css/styles.css">
 </head>
@@ -96,6 +96,11 @@
           <i class="bi bi-arrow-down-right"></i>
         </button>  
       </a>
+    </div>
+    <div class="main__content2">
+      <img src="src/images/Video/gif.gif" alt="gif chip">
+      <img src="src/images/icon/gif.gif" alt="gif coala">
+      
     </div>
   </main>
 
