--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
       </a>
     </div>
     <div class="main__content2">
-      <img src="src/images/Video/gif.gif" alt="gif chip">
-      <img src="src/images/icon/gif.gif" alt="gif coala">
+      <img  src="src/images/Video/gif.gif" alt="gif chip">
+     <img src="src/images/icon/gif.gif" alt="gif coala"> 
       
     </div>
   </main>
@@ -228,7 +228,7 @@
       <div class="about__description">
         <h2>Sobre mim</h2>
         <p>
-          Sou Giselle Santos, tecnóloga em Redes de Computadores. Tenho conhecimentos em HTML, CSS e JavaScript, além de cursos em Python, Cibersegurança Jr. Gosto de criar projetos práticos e estou em busca de oportunidades para aplicar minhas habilidades.
+          Sou Giselle Santos, Formada em Redes de Computadores, com experiência em atendimento ao cliente e suporte técnico. Apaixonada por tecnologia. Tenho habilidades em HTML, CSS e JavaScript e Python e entre outros, e estou constantemente aprendendo novas tecnologias para aprimorar minhas competências. Busco oportunidades para aplicar meus conhecimentos e crescer profissionalmente.
         </p>  
         <div class="about__icons">
           <i class=""></i>
@@ -240,7 +240,7 @@
               <i class="bi bi-arrow-up-right"></i>
             </button> 
           </a>
-          <a href="">
+          <a href="src/Documento/Curriculo_Giselle_Santos.pdf" download>
             <button class="btn">
               <span>Currículo</span>
             </button>
@@ -307,6 +307,23 @@
                 Fundamentos de redes comutadas e roteadas, configuração de switches e roteadores, conceitos de VLAN, roteamento estático e dinâmico, além de noções básicas sobre redes wireless.
               </p>
             </div>
+            <div class="accordion__item">
+            <button class="accordion__header">
+              <span>Network basics, Network Defense and Network devices and initial configuration</span>
+              <i class="bi bi-caret-down-fill"></i>
+            </button>
+            <div class="accordion__body">
+              <p>
+                <ul>
+                  <li>Cisco Network Academy. May 17, 2023</li>
+                  <li>Cisco Network Academy. September 16, 2024</li>
+                  <li>Cisco Network Academy. August 21, 2024</li>
+                </ul>
+              </p>
+              <p>
+                Fundamentos de redes, conceitos de defesa de rede, dispositivos de rede e configuração inicial.
+              </p>
+            </div>
           </div>
           </div>
         </div>
@@ -346,8 +363,7 @@
 
   <footer>
     <p>
-      © 2025. Portfólio desenvolvido para fins educativos no Lab "Construindo seu Portfolio Front-end do Zero" da 
-      <a href="" target="_blank">Digital Innovation One</a> por 
+      © 2025.Rights reserved
       <a href="" target="_blank">Giselle Santos</a>.
     </p>
   </footer>
