--- a/index.html
+++ b/index.html
@@ -307,24 +307,25 @@
                 Fundamentos de redes comutadas e roteadas, configuração de switches e roteadores, conceitos de VLAN, roteamento estático e dinâmico, além de noções básicas sobre redes wireless.
               </p>
             </div>
-            <div class="accordion__item">
-            <button class="accordion__header">
+          </div>
+          <div class="accordion__item">
+            <button class="accordion__header end">
               <span>Network basics, Network Defense and Network devices and initial configuration</span>
               <i class="bi bi-caret-down-fill"></i>
             </button>
-            <div class="accordion__body">
+            <div class="accordion__body end">
               <p>
                 <ul>
                   <li>Cisco Network Academy. May 17, 2023</li>
                   <li>Cisco Network Academy. September 16, 2024</li>
                   <li>Cisco Network Academy. August 21, 2024</li>
                 </ul>
+
               </p>
               <p>
                 Fundamentos de redes, conceitos de defesa de rede, dispositivos de rede e configuração inicial.
               </p>
             </div>
-          </div>
           </div>
         </div>
   </section>
