--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
         </a>
       </li>
        <li>
-        <a class="menu__link" href="https://wa.me/21970735806" target="_blank">
+        <a class="menu__link" href="https://wa.me/5521970735806?text=Olá!%20Gostaria%20de%20mais%20informações" target="_blank">
           <i class="bi bi-whatsapp"></i>
           <span>WhatsApp</span>
         </a>
