--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
   <section id="sobre" class="about">
     <div class="about__content1">
-      <img class="about__photo" src="src/images/foto/Foto.jpeg" alt="">
+      <img class="about__photo" src="src/images/foto/Foto_Perfil.jpeg" alt="">
       <div class="about__description">
         <h2>Sobre mim</h2>
         <p>
